Feat: creation of transactions and transfers, listing and deletion of incomes, expenses and transfers, as well as improvements to listings.

--- a/PersonalFinance/app/build.gradle
+++ b/PersonalFinance/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     annotationProcessor(libs.roomcompiler)
     implementation(libs.lifecycleextensions)
     annotationProcessor(libs.lifecyclecompile)
+    implementation(libs.cardview)
 
     implementation libs.appcompat
     implementation libs.material
